# fastapi-ai-backend

./: .env.example  .gitignore  .tmp-commit.sh  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  worker.py
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/api/: router.py
app/core/: celery_app.py  config.py  database.py  exceptions.py  health.py  logging.py  metrics.py
app/models/: __init__.py  chunk.py  document.py  task.py
app/schemas/: __init__.py  chat.py  document.py  retrieval.py  task.py
app/services/: cache.py  chat.py  chunker.py  document_parser.py  indexing.py  llm_client.py  retrieval.py  storage.py
app/tasks/: __init__.py  indexing.py
docs/: api-spec.md  api.md  architecture.md  configuration.md  db-schema.md  deployment-guide.md  dify-integration.md  dify-issues.md  dify-local-startup.md  dify-week2-review.md  interview-notes.md  overview.md  week1-summary.md  week2-summary.md  week3-summary.md  week4-summary.md  week5-summary.md  week6-summary.md
docs/deployment/: docker.md  troubleshooting.md  verification.md
docs/integrations/: dify.md
integrations/: dify-rag-workflow.yml  dify-tool.openapi.yaml
scripts/: check_embedding_provider.py  smoke_all.py  smoke_index.py  smoke_query.py  smoke_retrieval.py  smoke_stream.py  smoke_task.py  smoke_upload.py
tests/: conftest.py  test_api_routes.py  test_chat_service.py  test_chunker.py  test_document_parser.py  test_indexing_service.py  test_indexing_task.py  test_llm_client.py  test_metrics_store.py  test_retrieval_service.py
(+8 files in other folders)
